# competitor-insight

./: .dockerignore  .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json
docker/: Dockerfile  docker-compose.yml
src/: config.py  graph.py  observability.py  state.py  supervisor.py
src/agents/: base.py  evaluator.py  feature.py  pricing.py  scenario.py  sentiment.py  summarize.py
src/api/: main.py  routes.py
src/tools/: rag.py  scraper.py  search.py
static/: index.html
tests/: test_graph.py
