[project]
name = "competitor-insight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai",
    "langchain-community",
    "chromadb",
    "redis",
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "psycopg2-binary",
    "langgraph-checkpoint-postgres",
    "trafilatura",
    "pydantic-settings",
    "httpx",
]
