[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "competitor-insight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai",
    "langchain-community",
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "langgraph-checkpoint-postgres",
    "trafilatura",
    "pydantic-settings",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]